# satellite_gateway

./: .gitignore  README.md
data/sample/: co2data.csv  co2data.sql
gateway/: .env.example  Cargo.toml  README.md
gateway/src/: config.rs  main.rs  models.rs  mongo_client.rs  mysql_client.rs
